mType/tests/testFiles/import/error/importMissingPath.mt
// Test: Missing file path after 'from'
import { SomeClass } from

var obj = SomeClass();
